force-app/main/default/objects/LPNR_Position__c/LPNR_Position__c.object-meta.xml
<CustomObject>
    <description>Junction object between learning path notification record and position objects.</description>
    <label>LPN Position</label>
    <nameField>
        <displayFormat>LPN Position {00000000}</displayFormat>
        <label>LPN Position ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LPN Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>