force-app/main/default/objects/LPNR_Position__c/fields/Learning_Path_Notification_Record__c.field-meta.xml
<CustomField>
    <fullName>Learning_Path_Notification_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup relationship to the learning path notification record object.</description>
    <inlineHelpText>Use this field to associate a learning path notification record to a position.</inlineHelpText>
    <label>Learning Path Notification ID</label>
    <referenceTo>Learning_Path_Notification_Record__c</referenceTo>
    <relationshipLabel>LPN Positions</relationshipLabel>
    <relationshipName>LPNR_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>