force-app/main/default/objects/LPNR_Position__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is a lookup relationship to the Position object.</description>
    <inlineHelpText>Use this field to associate a position to a learning path notification record.</inlineHelpText>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipName>LPNR_Positions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>