force-app/main/default/objects/LPNR_Position__c/fields/Position_Profile_Type__c.field-meta.xml
<CustomField>
    <fullName>Position_Profile_Type__c</fullName>
    <description>Profile type of selected position.</description>
    <formula>TEXT(Position__r.Profile_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Profile type of selected position.</inlineHelpText>
    <label>Position Profile Type</label>
    <type>Text</type>
</CustomField>